# carbonpay-platform

./: .gitignore  .gitkeep  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/backend/: .dockerignore  .env.example  Dockerfile  docker-start.sh  docker-stop.sh  jest.config.js  package.json  test-all.sh  tsconfig.json
app/backend/idl/: carbon_pay.json
app/backend/src/: server.ts
app/frontend/: package-lock.json  package.json
app/frontend/src/: middleware.ts
app/frontend/types/: index.ts  onboarding.ts
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: server.ts
backend/src/classes/: envManager.ts
backend/src/config/: app.ts  constants.ts  database.ts
backend/src/controllers/: admin.controller.ts  auth.controller.ts  organization.controller.ts  project.controller.ts  retirement.controller.ts  wallet.controller.ts
backend/src/database/: index.ts  (+3 more)
contracts/: Anchor.toml  package.json
contracts/tests/: contracts.ts
deploy/: docker-compose.yml
docker/: docker-compose.yml
programs/carbon_pay/: Cargo.toml
programs/carbon_pay/src/: errors.rs  lib.rs
programs/carbon_pay/src/instructions/: initialize_carbon_credits.rs  initialize_project.rs  mint_tokens.rs  mod.rs  purchase_carbon_credits.rs  request_offset.rs
programs/carbon_pay/src/state/: carbon_credits.rs  mod.rs  project.rs
src/routes/: auth.ts
tests/: blockchain-integration.test.ts  carbon-credits-api.test.ts  carbon-credits-simple.test.ts  carbon_pay.ts
(+81 files in other folders)
